--- a/index.html
+++ b/index.html
@@ -74,7 +74,11 @@
             </div>
             <div class="aboya">
                 <div class="video">
-                    <video src="imgs/New folder/ReDa.mp4" controls></video>
+                    <video
+                        src="imgs/New folder/ReDa.mp4"
+                        controls
+                        preload="auto"
+                    ></video>
                 </div>
             </div>
         </div>
@@ -182,7 +186,11 @@
             </div>
             <div class="ento-min">
                 <div class="video">
-                    <video src="imgs/New folder/question.mp4" controls></video>
+                    <video
+                        src="imgs/New folder/question.mp4"
+                        controls
+                        preload="auto"
+                    ></video>
                 </div>
             </div>
         </div>
